--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -362,14 +362,18 @@ form.event ul {
   margin: 12px 0;
 }
 .event span.title {
-  font-weight: 900;
+  font-weight: 400;
 }
 .event span.desc {
-  font-weight: 100;
+  font-weight: 300;
+  font-size: 18px;
 }
+.event span.dates,
 .event span.tag {
   font-style: oblique;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 18px;
+  color: #444;
 }
 /* Content Header */
 .content_header {
@@ -380,7 +384,8 @@ form.event ul {
 }
 .content_header.fixed {
   top: 0;
-  width: 95%;
+  left: 0;
+  width: 100%;
   background: #fff;
   -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
@@ -411,6 +416,14 @@ form.event ul {
 }
 .content_header.fixed h1.title {
   margin-left: 36px;
+  font-size: 32px;
+}
+.content_header.fixed .action_menu {
+  padding: 24px 0;
+}
+.content_header.fixed .action_menu > ul > li > a {
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 /* Media List */
 .media {
@@ -429,7 +442,7 @@ form.event ul {
   width: 150px;
   height: 150px;
 }
-.media img.fade1 {
+.fade1 {
   opacity: 0;
   /* make things invisible upon start */
 
@@ -450,7 +463,7 @@ form.event ul {
   -moz-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
-.media img.fade2 {
+.fade2 {
   opacity: 0;
   /* make things invisible upon start */
 
@@ -471,7 +484,7 @@ form.event ul {
   -moz-animation-delay: 0.4s;
   animation-delay: 0.4s;
 }
-.media img.fade3 {
+.fade3 {
   opacity: 0;
   /* make things invisible upon start */
 
@@ -522,30 +535,70 @@ form.event ul {
   display: none;
 }
 .media_popup {
-  color: #888;
+  color: #777;
   background: #000;
   height: 612px;
-  width: 800px;
+  width: 900px;
   position: absolute;
   left: 50%;
   top: 50%;
-  margin-left: -400px;
+  margin-left: -450px;
   margin-top: -306px;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
-.media_popup img {
+.media_img_container {
   float: left;
 }
 .media_details {
-  margin: 15px 15px 15px 627px;
+  margin: 15px 15px 15px 640px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .media_details div {
   margin: 10px 0;
+  font-weight: 300;
 }
 .overlay_close {
+  height: 20px;
   text-align: right;
   margin: 10px;
+  background: url(data:image/gif;base64,R0lGODlhFAAUAJEAAE1NTf///////wAAACH5BAEHAAIALAAAAAAUABQAAAIzBISpK+YMm5Enpodw1HlCfnkKOIqU1VXk55goVb2hi7Y0q95lfG70uurNaqLgTviyyUoFADs=) no-repeat right center;
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  -webkit-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
+  filter: alpha(opacity=50);
+  -webkit-transition: all 0.1s ease-in;
+  -moz-transition: all 0.1s ease-in;
+  -o-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+.overlay_close:hover {
+  cursor: pointer;
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+  -webkit-transition: all 0.1s ease-in;
+  -moz-transition: all 0.1s ease-in;
+  -o-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+.media_details > .details_desc {
+  color: #EEE;
+  margin-bottom: 30px;
+}
+.media_details > .details_author,
+.media_details > .details_created {
+  margin-left: 70px;
+}
+.details_author_img {
+  border-radius: 200px;
+  width: 50px;
+  float: left;
 }
 /* added by Leo */
 .action_menu > ul > li.remove.hidden {
