--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html
 		
 		//- import CSS
 		link(rel='stylesheet', href='/stylesheets/style.css')
-		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Poiret+One')
+		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Poiret+One')
 
 	body
 		header
