--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -171,6 +171,13 @@
   -ms-filter: blur(@radius);
   filter: blur(@radius);
 }
+.brightness(@alpha: 0.5) {
+  -webkit-filter: brightness(@alpha);
+  -moz-filter: brightness(@alpha);
+  -o-filter: brightness(@alpha);
+  -ms-filter: brightness(@alpha);
+  filter: brightness(@alpha);
+}
 
 /* make keyframes that tell the start state and the end state of our object */
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -302,15 +309,21 @@ h4 { font-size: 28px; }
 h5 { font-size: 18px; }
 h6 { font-size: 16px; }
 
+/* Fade sets */
+.fade1 { .fade-in(1s, 0.2s); }
+.fade2  { .fade-in(1s, 0.4s); }
+.fade3  { .fade-in(1s, 0.6s); }
+
 /* Global Header */
-header { background: #fff; .drop-shadow(0px, 0px, 2px, 0.25); text-align: center; vertical-align: middle; height: 65px;}
+header { background: #fff; padding-left: 40px; .drop-shadow(0px, 0px, 2px, 0.25); vertical-align: middle; height: 65px; }
+header h1 {line-height: 125%; }
 header h1.logo a { font-size: 0; }
-header h1.logo a img { width: 350px; }
+header h1.logo a img { width: 210px; }
 h1.title { float: left; margin: 12px 0; }
 
 img.background_img { position: fixed; top: 0;left: 0; width: 100%;  /*.blur(5px); .opacity(0.5);*/  z-index: -999; }
 
-#main_content { margin: 0 auto; width: 95%;}
+#main_content { margin: 0 50px; }
 
 a { color:#00B7FF; text-decoration: none; }
 a:hover { color: #0077ff; text-decoration: underline; }
@@ -350,7 +363,7 @@ form.event ul { margin:0; padding:0; list-style:none; }
 .event span { display:block; margin: 12px 0; }
 .event span.title { font-weight: 400; }
 .event span.desc { font-weight: 300; font-size: 18px; }
-.event span.dates, .event span.tag { font-style:oblique; font-weight: 300; font-size: 18px; color: #444;}
+.event span.dates, .event span.tag { font-weight: 300; font-size: 18px; color: #666;}
 
 /* Content Header */
 .content_header { .transitionHeight(0.2s, ease-out); }
@@ -379,21 +392,28 @@ form.event ul { margin:0; padding:0; list-style:none; }
   list-style:none; 
   text-align: center;
 }
+.media figure { 
+  overflow: hidden;
+    width: 150px;
+  height: 150px;
+  display: inline-block;
+}
 .media img { 
   margin: 0px; 
   padding:0;  
-  .transition(0.2s, ease-out);
+  .transition(0.3s, ease-out);
   width: 150px;
   height: 150px;
+  overflow: hidden;
 }
-.fade1 { .fade-in(1s, 0.2s); }
-.fade2  { .fade-in(1s, 0.4s); }
-.fade3  { .fade-in(1s, 0.6s); }
-.media img:hover {
+.media img:hover {   .transform(scale(1.02)); }
+.media figure:hover {
   cursor: pointer;
   background-color: #0073B2;
   .drop-shadow(1px, 0px, 20px, 0.7);
-  .transition(0.2s, ease-in);
+  .brightness(120%);
+  .transition(0.3s, ease-in);
+
   /*margin-top: -1px;
   margin-left: 0px;
   margin-right: 0px;
