--- a/views/album.jade
+++ b/views/album.jade
@@ -39,6 +39,9 @@ block content
   div.media
   div.end_of_media
 
+  //- back to top
+  a(id="action_scrolltop", href="#top") Top
+
 block scripts
   script(type='text/javascript', src='/javascripts/libs/jquery.inview.min.js')
   script(type='text/javascript', src='/javascripts/libs/jquery.viewport.mini.js')
