--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -321,7 +321,7 @@ header h1.logo a { font-size: 0; }
 header h1.logo a img { width: 210px; }
 h1.title { float: left; margin: 12px 0; }
 
-img.background_img { position: fixed; top: 0;left: 0; width: 100%;  /*.blur(5px); .opacity(0.5);*/  z-index: -999; }
+img.background_img { position: fixed; top: 0;left: 0; width: 100%; height: 100%; z-index: -999; }
 
 #main_content { margin: 0 50px; }
 
@@ -429,8 +429,8 @@ form.event ul { margin:0; padding:0; list-style:none; }
 .end_of_media { height: 30px; }
 
 /* overlay */
-.overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 999999; background: rgba(0, 0, 0, 0); height: 0; .transition(0.2s, ease-in); }
-.overlay.active { height: 100%; .transition(0.2s, ease-out); background: rgba(0, 0, 0, 0.9); }
+.overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 999999; background: rgba(0, 0, 0, 0); .transition(0.2s, ease-in); display: none; }
+.overlay.active { height: 100%; .transition(0.2s, ease-out); background: rgba(0, 0, 0, 0.9); display: inherit;}
 .media_popup {color: #777;
 background: #000;
 height: 612px;
@@ -464,4 +464,9 @@ overflow: hidden;
   margin-left: -2px;
   margin-right: 6px;
   margin-bottom: 6px;
+}
+
+
+@media screen and (orientation:portrait) {
+  img.background_img { position: fixed; top: 0;left: 0; height: 100%; width: auto; z-index: -999; }
 }
