Added next and previous to image details

--- a/views/album.jade
+++ b/views/album.jade
@@ -31,6 +31,9 @@ block content
     div.media_popup
       div.media_img_container
         img
+        div.action_next_prev_img
+          a(id="action_prev_img", href="#prev_img") Prev
+          a(id="action_next_img", href="#next_img") Next
       div.overlay_close
       div.media_details        
 
