--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -390,7 +390,7 @@ a:active {
 }
 #action_scrolltop {
   background: url(/images/icons/up.png) no-repeat center center, rgba(255, 255, 255, 0.2);
-  margin: 0;
+  margin: 0 -32px;
   color: rgba(0, 0, 0, 0);
   -webkit-box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.8);
   -moz-box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.8);
@@ -418,6 +418,83 @@ a:active {
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
+}
+.action_next_prev_img {
+  position: absolute;
+  left: 10px;
+  top: 0;
+  width: 592px;
+}
+.media_img_container:hover {
+  -webkit-filter: brightness(80%);
+  -moz-filter: brightness(80%);
+  -o-filter: brightness(80%);
+  -ms-filter: brightness(80%);
+  filter: brightness(80%);
+}
+#action_prev_img {
+  float: left;
+  font-size: 0;
+  background: url(/images/icons/left.png) no-repeat -32px center;
+  width: 32px;
+  height: 612px;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  -moz-opacity: 0.6;
+  -khtml-opacity: 0.6;
+  -webkit-opacity: 0.6;
+  opacity: 0.6;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
+  filter: alpha(opacity=60);
+}
+.media_img_container:hover #action_prev_img {
+  background: url(/images/icons/left.png) no-repeat left center;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+#action_prev_img:hover {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+}
+#action_next_img {
+  float: right;
+  font-size: 0;
+  background: url(/images/icons/right.png) no-repeat 32px center;
+  width: 32px;
+  height: 612px;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  -moz-opacity: 0.6;
+  -khtml-opacity: 0.6;
+  -webkit-opacity: 0.6;
+  opacity: 0.6;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
+  filter: alpha(opacity=60);
+}
+.media_img_container:hover #action_next_img {
+  background: url(/images/icons/right.png) no-repeat right center;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+#action_next_img:hover {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
 }
 /* Register Form */
 form.register ul {
