--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -346,10 +346,21 @@ a:active { text-decoration: none; }
 #action_slideshow { background: url(/images/icons/slideshow.png) no-repeat center center;  }
 #action_slideshow:hover { background: url(/images/icons/slideshow.png) no-repeat center -90px, #EEE; }
 
-#action_scrolltop { background: url(/images/icons/up.png) no-repeat center center, rgba(255, 255, 255, 0.2); margin: 0; color: rgba(0, 0, 0, 0); .box-shadow(0px 10px 20px rgba(255, 255, 255, 0.8)); position: fixed;  bottom: -128px; left: 50%; width: 64px; height: 64px; border-radius: 64px; .transition(0.2s, ease-out);  }
+#action_scrolltop { background: url(/images/icons/up.png) no-repeat center center, rgba(255, 255, 255, 0.2); margin: 0 -32px; color: rgba(0, 0, 0, 0); .box-shadow(0px 10px 20px rgba(255, 255, 255, 0.8)); position: fixed;  bottom: -128px; left: 50%; width: 64px; height: 64px; border-radius: 64px; .transition(0.2s, ease-out);  }
 #action_scrolltop.active { bottom: 15px; }
 #action_scrolltop:hover {  background: url(/images/icons/up.png) no-repeat center center, rgba(255, 255, 255, 0.9); .box-shadow(0px 0px 20px #FFF); .transition(0.2s, ease-in); }
 
+
+.action_next_prev_img { position: absolute; left: 10px; top: 0; width: 592px; }
+.media_img_container:hover { .brightness(80%); }
+
+#action_prev_img { float: left; font-size: 0; background: url(/images/icons/left.png) no-repeat -32px center; width: 32px; height: 612px; .transition(0.2s, ease-in); .opacity(0.6);}
+.media_img_container:hover #action_prev_img { background: url(/images/icons/left.png) no-repeat left center; .transition(0.2s, ease-out);}
+#action_prev_img:hover { .opacity(1); }
+
+#action_next_img { float: right; font-size: 0; background: url(/images/icons/right.png) no-repeat 32px center; width: 32px; height: 612px; .transition(0.2s, ease-in); .opacity(0.6);}
+.media_img_container:hover #action_next_img { background: url(/images/icons/right.png) no-repeat right center; .transition(0.2s, ease-out);}
+#action_next_img:hover { .opacity(1); }
 
 /* Register Form */
 form.register ul { margin:0; padding:0; list-style:none; }
@@ -445,11 +456,14 @@ overflow: hidden;
 .transition(0.2s, ease-in);
 }
 .active .media_popup { top: 50%; .transition(0.2s, ease-out); }
+
 .media_img_container { float: left;}
 .media_details { margin: 15px 15px 15px 640px; overflow-x: hidden; overflow-y: auto; }
 .media_details div { margin: 10px 0; font-weight: 300; }
+
 .overlay_close { height: 20px; text-align: right; margin: 10px; background: url(data:image/gif;base64,R0lGODlhFAAUAJEAAE1NTf///////wAAACH5BAEHAAIALAAAAAAUABQAAAIzBISpK+YMm5Enpodw1HlCfnkKOIqU1VXk55goVb2hi7Y0q95lfG70uurNaqLgTviyyUoFADs=) no-repeat right center; .opacity(0.5); .transition(0.1s, ease-in);}
 .overlay_close:hover { cursor: pointer; .opacity(1); .transition(0.1s, ease-in); }
+
 .media_details > .details_desc { color: #EEE; margin-bottom: 30px; }
 .media_details > .details_author, .media_details > .details_created { margin-left: 70px; }
 .details_author_img { border-radius: 200px; width: 50px; float: left; }
