Fixed lazy loading in admin screen

--- a/views/event/get.jade
+++ b/views/event/get.jade
@@ -41,4 +41,4 @@ block content
           img.item(src="#{medium.images.thumbnail.url}", id="#{medium.id}")
       else
         div no images at this time
-    div.end
+  div.end_of_media
