--- a/views/event/get.jade
+++ b/views/event/get.jade
@@ -20,7 +20,7 @@ block content
       h1.title=event.name     
 
       //- action menu
-      div.action_menu
+      div.admin_menu
         ul
           li(class="remove hidden")
             a(href="javascript:void(0);") Remove
