--- a/views/event/get.jade
+++ b/views/event/get.jade
@@ -31,7 +31,7 @@ block content
     div.event
       //-span.title= d
       span.desc= event.desc
-      span.dates #{event.start.getFullYear()}.#{event.start.getMonth()}.#{event.start.getDate()} ~ #{event.end.getFullYear()}.#{event.end.getMonth()}.#{event.end.getDate()}
+      span.dates #{event.start.getFullYear()}.#{event.start.getMonth() + 1}.#{event.start.getDate()} ~ #{event.end.getFullYear()}.#{event.end.getMonth() + 1}.#{event.end.getDate()}
       span.tag &#35;#{event.tag}    
 
     //- event media
