--- a/views/event/list.jade
+++ b/views/event/list.jade
@@ -17,7 +17,7 @@ block content
           a(href='/events/#{event._id}')
             span.title= event.name
           span.desc= event.desc
-          span.dates #{event.start} - #{event.end}
+          span.dates #{event.niceStart} ~ #{event.niceEnd}
           span.tag &#35;#{event.tag}
           span 
             a.download(href="/events/#{event._id}/download") download
