--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
 	head
-		title ievents
+		title CAPSULATI
 
 		//- import JS libraries
 		script(type='text/javascript', src='/javascripts/libs/jquery-1.10.2.min.js')
