--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,9 @@ html
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Poiret+One')
 
+		//- meta
+		meta(name="apple-mobile-web-app-capable", content="yes")
+
 	body
 		header
 			h1.logo
