--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
 		block scripts
 		
 		//- import CSS
+		link(rel="apple-touch-icon", href="ios.png")
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Poiret+One')
 
