--- a/views/album.jade
+++ b/views/album.jade
@@ -48,6 +48,7 @@ block scripts
   link(rel='stylesheet', href='/stylesheets/animate.min.css')
   script(type='text/javascript', src='/javascripts/libs/jquery.inview.min.js')
   script(type='text/javascript', src='/javascripts/libs/jquery.viewport.mini.js')
+  script(type='text/javascript', src='/javascripts/libs/moment.min.js')
   script(type='text/javascript', src='/javascripts/album.js')
   script.
-    initAlbum("#{event._id}", 1000, 15000);
+    initAlbum("#{event._id}", 1000, 5000);
