--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
 	body
 		header
 			h1.logo
-				a(href="/") Capulati
+				a(href="#") Capulati
 					img(src="/images/logo4.png")
 		div#main_content			
 			block content
